src/objects/Campaign_Target__c/Campaign_Target__c.object-meta.xml
<CustomObject>
    <label>Campaign Target</label>
    <nameField>
        <displayFormat>CAT-{00000000}</displayFormat>
        <label>Campaign Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>