src/objects/Campaign_Target__c/fields/Send_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Target</label>
    <type>Checkbox</type>
</CustomField>