src/objects/Campaign_Target__c/fields/Target_Contact__c.field-meta.xml
<CustomField>
    <fullName>Target_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Targets</relationshipLabel>
    <relationshipName>Campaign_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>